--- a/CSS/v13 Exercise/DesigningCard.html
+++ b/CSS/v13 Exercise/DesigningCard.html
@@ -13,14 +13,15 @@
        
         body{
             /* text-align: center; */
-            background-color: rgb(248, 247, 247);
+            background-color: rgb(100, 97, 97);
+            display: flex;
         }
         .box{
             margin: 10px;
             padding: 8px; 
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            height: 80vh;
-            width: 350px;
+            height: 550px;
+            width: 330px;
             border: 1px solid #a19f9f56;
             border-radius: 10px;            
             background-color: #fff;
@@ -32,11 +33,11 @@
             margin: 10px;
             position: relative;
             top: 10px;
-            padding: 2px;            
+            padding: 2px 6px;            
             font-size: small;
             font-family: Poppins,sans-serif;
             background-color: rgb(255, 255, 255);
-            border: 1px solid rgba(167, 166, 166, 0.329);
+            border: 1px solid grey;
             border-radius: 10px;
             width: 20vw;
             height: 55vh;
@@ -51,8 +52,7 @@
             margin: 10px;
             font-family: Poppins,sans-serif;
             font-size: 16px;
-            color:rgba(167, 166, 166, 0.932);
-            
+            color:rgba(167, 166, 166, 0.932);            
             line-height: 1.5;
             width: 330px;
             height: 150px;
@@ -77,7 +77,13 @@
            border: none;
            border-radius: 10px;
            font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+           font-weight: bold;
            color:rgb(0 125 204);
+           cursor: pointer;
+        }
+        button:hover{
+            background-color: rgba(19, 153, 248, 0.699);
+            color: rgba(243, 246, 248, 0.938);
         }
     </style>
 </head>
@@ -86,7 +92,28 @@
 
     <div class="box">
         <div class="box1">
-            <img src="lakeImage.jpg" alt="lake image" width="350px">
+            <img src="lakeImage.jpg" alt="lake image" width="330px">
+        </div>
+        <div class="caption">
+            Nature
+        </div>
+        <div class="caption">
+            Lake
+        </div>
+
+        <h2 class="heading">
+            Lago di Braies
+        </h2>
+        <p class="para">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea enim nisi deserunt earum totam quis, culpa iste laudantium? Velit esse cupiditate nihil. Voluptatum, aspernatur adipisci commodi et reprehenderit deserunt quia.
+        </p>
+        <div class="button">
+            <button>Read more</button>
+        </div>
+    </div>
+    <div class="box">
+        <div class="box1">
+            <img src="lakeImage.jpg" alt="lake image" width="330px">
         </div>
         <div class="caption">
             Nature
